refactor: replace onCreate(), onUpdate() with annotations